add some code of js

--- a/Home.html
+++ b/Home.html
@@ -9,6 +9,7 @@
     />
 
     <title>practice set in nepal 2023.</title>
+    <link rel="stylesheet" href="index.css">
     <link
       rel="shortcut icon"
       href="./img/android-chrome-192x192.png"
@@ -59,5 +60,6 @@ Our Company is here to help you with eternal digital experiences. Softbenz assur
       <p>copyright section 2021.</p>
     </footer>
     <hr />
+    
   </body>
 </html>
